# cracker

./: CHANGELOG.md  Cargo.toml  Makefile.tst  README.md
.github/workflows/: ci.yml
src/: args.rs  lib.rs  main.rs  stdout.rs  task_runners.rs  utils.rs
src/icons/: mod.rs
src/stdout/: worker.rs
src/task_runners/: makefile.rs  mod.rs
src/widgets/: mod.rs  stdoutput.rs
tests/test_files/: empty_lines.txt
