[package]
name = "cracker"
include = ["src/**/*", "README.md"]
default-run = "ck"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0"
description = "Cracker is a simple, fast, and plain task runner. Designed with the idea of supporting as many task tools as possible."
authors = ["Lloyd Bond"]

[[bin]]
name = "ck"
path = "src/main.rs"

[dependencies]
iced = {version = "0.13.1", features = ["debug", "tokio", "highlighter", "lazy"]}
once_cell = "1.20.2"
peg = "0.8.4"
tokio = {version = "1", features = ["fs", "process", "io-util"]}


[dev-dependencies]
tokio = {version = "1", features = [ "macros"]}
