[package]
name = "cracker"
include = ["src/**/*", "README.md"]
default-run = "ck"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0"
description = "Cracker is a simple, fast, and plain task runner. Designed with the idea of supporting as many task tools as possible."
authors = ["Lloyd Bond"]

[[bin]]
name = "ck"
path = "src/main.rs"

[dependencies]
iced = {version = "0.13.1", features = ["debug", "tokio", "highlighter", "lazy"]}
itertools = "0.13.0"
log = "0.4.22"
once_cell = "1.20.2"
peg = "0.8.4"
pretty_env_logger = "0.5.0"
tokio = {version = "1", features = ["fs","macros", "process", "io-util"]}


[dev-dependencies]
log = "0.4.22"
tokio = {version = "1", features = [ "macros"]}

[profile.release]
debug = true

